--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.capstone.wifiposition">
 
+<!--    允许程序获得wifi的状态信息-->
     <uses-permission
         android:name="android.permission.ACCESS_WIFI_STATE"
         android:required="true" />
     <uses-permission
         android:name="android.permission.CHANGE_WIFI_STATE"
         android:required="true" />
+<!--    允许程序获得手机网络权限-->
     <uses-permission
         android:name="android.permission.INTERNET"
         android:required="true" />
